# bridge-lang

./: Cargo.toml  LICENSE  RATIONALE.md  README.md  flake.nix
.githooks/: pre-commit
src/: codegen.rs  main.rs  semantic.rs  syntax.pest  syntax.rs
src/semantic/: common.rs  mod.rs  typing.rs  variable_usage.rs
src/snapshots/: bridgelang__syntax__test__parses_complex_input.snap  bridgelang__syntax__test__parses_expressions.snap  bridgelang__syntax__test__parses_literals_correctly.snap
