[package]
name = "bridgelang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.6"
pest_derive = "2.7.6"
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
