[package]
name = "bridgelang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.6"
pest_derive = "2.7.6"
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
rand = "0.8.5"
derive_more = "0.99.17"
rustyline = "13.0.0"
lazy_static = "1.4.0"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml", "redactions"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
